{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 20,
  "lineage": "d5a72f11-391f-e5c5-4fa0-150032140c3e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "associate_public_ip_address": true,
            "get_password_data": false,
            "id": "i-0a755d16cb349c8bf",
            "instance_type": "t2.micro",
            "key_name": "2AWSB46-KP",
            "source_dest_check": true,
            "subnet_id": "subnet-0710646bb85bfc12b",
            "tags": {
              "Name": "devsecopsb35-PublicServer-1",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "tags_all": {
              "Name": "devsecopsb35-PublicServer-1",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b99515d799c17360"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.Public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "associate_public_ip_address": true,
            "get_password_data": false,
            "id": "i-017d2108adc2ca72d",
            "instance_type": "t2.micro",
            "key_name": "2AWSB46-KP",
            "source_dest_check": true,
            "subnet_id": "subnet-06ca6634ce9a5e699",
            "tags": {
              "Name": "devsecopsb35-PublicServer-2",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "tags_all": {
              "Name": "devsecopsb35-PublicServer-2",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b99515d799c17360"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.Public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "associate_public_ip_address": true,
            "get_password_data": false,
            "id": "i-069176a1f80de3c71",
            "instance_type": "t2.micro",
            "key_name": "2AWSB46-KP",
            "source_dest_check": true,
            "subnet_id": "subnet-0c74a0faecdab0a23",
            "tags": {
              "Name": "devsecopsb35-PublicServer-3",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "tags_all": {
              "Name": "devsecopsb35-PublicServer-3",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b99515d799c17360"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.Public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507896569201:internet-gateway/igw-0016daaa75ec725b2",
            "id": "igw-0016daaa75ec725b2",
            "owner_id": "507896569201",
            "tags": {
              "Name": "devsecopsb35-IGW",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "tags_all": {
              "Name": "devsecopsb35-IGW",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "vpc_id": "vpc-0fe89bbbcccc883d1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507896569201:route-table/rtb-0598c0dbd76193e89",
            "id": "rtb-0598c0dbd76193e89",
            "owner_id": "507896569201",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devsecopsb35-Private-RT",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "tags_all": {
              "Name": "devsecopsb35-Private-RT",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe89bbbcccc883d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507896569201:route-table/rtb-09d7b0ec2a43f2bc9",
            "id": "rtb-09d7b0ec2a43f2bc9",
            "owner_id": "507896569201",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0016daaa75ec725b2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devsecopsb35-Main-RT",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "tags_all": {
              "Name": "devsecopsb35-Main-RT",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe89bbbcccc883d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private-RT-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2873706713adcba",
            "route_table_id": "rtb-0598c0dbd76193e89",
            "subnet_id": "subnet-0ad32a120adf3f4e4"
          },
          "dependencies": [
            "aws_route_table.terraform-private-RT",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c25d80fba89e1282",
            "route_table_id": "rtb-0598c0dbd76193e89",
            "subnet_id": "subnet-0610dbd138560a97a"
          },
          "dependencies": [
            "aws_route_table.terraform-private-RT",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae00b96da56d5cf3",
            "route_table_id": "rtb-0598c0dbd76193e89",
            "subnet_id": "subnet-05c52fd3a8ea7337d"
          },
          "dependencies": [
            "aws_route_table.terraform-private-RT",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ed72ed1c395c213",
            "route_table_id": "rtb-0598c0dbd76193e89",
            "subnet_id": "subnet-0f29e9b086973286b"
          },
          "dependencies": [
            "aws_route_table.terraform-private-RT",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f556481a21f8c573",
            "route_table_id": "rtb-0598c0dbd76193e89",
            "subnet_id": "subnet-0f05d4d1a0c62d314"
          },
          "dependencies": [
            "aws_route_table.terraform-private-RT",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03be35830ea305949",
            "route_table_id": "rtb-09d7b0ec2a43f2bc9",
            "subnet_id": "subnet-0710646bb85bfc12b"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.Public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08565237b420150d9",
            "route_table_id": "rtb-09d7b0ec2a43f2bc9",
            "subnet_id": "subnet-06ca6634ce9a5e699"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.Public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b63572550e622e87",
            "route_table_id": "rtb-09d7b0ec2a43f2bc9",
            "subnet_id": "subnet-0c74a0faecdab0a23"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.Public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e3696b97898b8f6",
            "route_table_id": "rtb-09d7b0ec2a43f2bc9",
            "subnet_id": "subnet-022829d2c73acc23a"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.Public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b326ab77bc1725f",
            "route_table_id": "rtb-09d7b0ec2a43f2bc9",
            "subnet_id": "subnet-08e0fab808517841e"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.Public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507896569201:security-group/sg-0b99515d799c17360",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b99515d799c17360",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "507896569201",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fe89bbbcccc883d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507896569201:subnet/subnet-0710646bb85bfc12b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.35.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0710646bb85bfc12b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "507896569201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecopsb35-PublicSubnet-1",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "tags_all": {
              "Name": "devsecopsb35-PublicSubnet-1",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "vpc_id": "vpc-0fe89bbbcccc883d1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507896569201:subnet/subnet-06ca6634ce9a5e699",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.35.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ca6634ce9a5e699",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "507896569201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecopsb35-PublicSubnet-2",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "tags_all": {
              "Name": "devsecopsb35-PublicSubnet-2",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "vpc_id": "vpc-0fe89bbbcccc883d1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507896569201:subnet/subnet-0c74a0faecdab0a23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.35.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c74a0faecdab0a23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "507896569201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecopsb35-PublicSubnet-3",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "tags_all": {
              "Name": "devsecopsb35-PublicSubnet-3",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "vpc_id": "vpc-0fe89bbbcccc883d1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507896569201:subnet/subnet-022829d2c73acc23a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.35.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022829d2c73acc23a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "507896569201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecopsb35-PublicSubnet-4",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "tags_all": {
              "Name": "devsecopsb35-PublicSubnet-4",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "vpc_id": "vpc-0fe89bbbcccc883d1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507896569201:subnet/subnet-08e0fab808517841e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.35.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e0fab808517841e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "507896569201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecopsb35-PublicSubnet-5",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "tags_all": {
              "Name": "devsecopsb35-PublicSubnet-5",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "vpc_id": "vpc-0fe89bbbcccc883d1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507896569201:subnet/subnet-0ad32a120adf3f4e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.35.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad32a120adf3f4e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "507896569201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecopsb35-PrivateSubnet-1",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "tags_all": {
              "Name": "devsecopsb35-PrivateSubnet-1",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "vpc_id": "vpc-0fe89bbbcccc883d1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507896569201:subnet/subnet-0610dbd138560a97a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.35.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0610dbd138560a97a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "507896569201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecopsb35-PrivateSubnet-2",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "tags_all": {
              "Name": "devsecopsb35-PrivateSubnet-2",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "vpc_id": "vpc-0fe89bbbcccc883d1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507896569201:subnet/subnet-05c52fd3a8ea7337d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.35.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c52fd3a8ea7337d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "507896569201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecopsb35-PrivateSubnet-3",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "tags_all": {
              "Name": "devsecopsb35-PrivateSubnet-3",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "vpc_id": "vpc-0fe89bbbcccc883d1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507896569201:subnet/subnet-0f29e9b086973286b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.35.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f29e9b086973286b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "507896569201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecopsb35-PrivateSubnet-4",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "tags_all": {
              "Name": "devsecopsb35-PrivateSubnet-4",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "vpc_id": "vpc-0fe89bbbcccc883d1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507896569201:subnet/subnet-0f05d4d1a0c62d314",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.35.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f05d4d1a0c62d314",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "507896569201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecopsb35-PrivateSubnet-5",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "tags_all": {
              "Name": "devsecopsb35-PrivateSubnet-5",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "vpc_id": "vpc-0fe89bbbcccc883d1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:507896569201:vpc/vpc-0fe89bbbcccc883d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.35.0.0/16",
            "default_network_acl_id": "acl-0aea8bf355a88d487",
            "default_route_table_id": "rtb-04339bb06c598e392",
            "default_security_group_id": "sg-0a73681ac4fc3402f",
            "dhcp_options_id": "dopt-060e0eb5a3bee8c1e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fe89bbbcccc883d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04339bb06c598e392",
            "owner_id": "507896569201",
            "tags": {
              "Name": "devsecopsb35",
              "Owner": "Satya",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            },
            "tags_all": {
              "Name": "devsecopsb35",
              "Owner": "Satya",
              "Terraform_Managed": "Yes",
              "environment": "development",
              "projectId": "devsecopsb35-pheonix-123"
            }
          }
        }
      ]
    }
  ]
}